# langrgaph-chatbot

./: readme.md
chatbot-backend/: .dockerignore  Dockerfile  docker-compose.yml  exampleEnv  pyproject.toml  start.sh
chatbot-backend/alembic/: env.py
chatbot-backend/alembic/versions/: 096fa2e4712e_added_document_url_in_documents_table.py  3db71e0ffa12_change_document_url_to_text.py  5726cf529909_rename_messages_table.py  6af5b4a5da5b_create_threads_and_messages.py  95e3fbb16dde_add_documents_and_chunks.py  d0dfa26778ba_add_failed_document_status.py  eea3735de27a_initial_schema.py
chatbot-backend/app/: main.py
chatbot-backend/app/ai/: checkpointer.py  graph_builder.py  nodes.py  prompts.py  states.py  tools.py
chatbot-backend/app/core/: celery_database.py  config.py  database.py  dependencies.py  security.py
chatbot-backend/app/database/enums/: document_status.py  message_status.py
chatbot-backend/app/database/models/: DocumentChunk.py  Documents.py  Message.py  Thread.py  User.py  __init__.py
chatbot-backend/app/routes/: auth_router.py  chat_router.py  document_router.py  thread_router.py
chatbot-backend/app/schema/: auth.py  chat.py  document.py  message.py  thread.py  user_response.py
chatbot-backend/app/services/: auth_service.py  chat_service.py  create_chunk_service.py  document_loader_service.py  document_service.py  embedding_service.py  message_service.py  retrieval_service.py  thread_service.py  update_document_service.py  vector_store.py
chatbot-backend/app/worker/: celery_app.py  document_tasks.py
chatbot-frontend/: package-lock.json  (+2 more)
(+39 files in other folders)
